classDiagram

    class AbstractInterface~ResourceRead, ResourceQuery, ResourceCreate, ResourceUpdate~ {
        <<Interface>>
        List~ResourceRead~ Find(ResourceQuery query)
        ... Create(...)
        ... Read(...)
        ... Update(...)
        ... Delete(...)
    }

    class UsersInterface {
        <<Interface>>
    }

    class IssuesInterface {
        <<Interface>>
    }

    class CommentsInterface {
        <<Interface>>
    }

    AbstractInterface <|-- UsersInterface
    AbstractInterface <|-- IssuesInterface
    AbstractInterface <|-- CommentsInterface

    style AbstractInterface fill:yellow